...
    <string name="updateAccountSuccess">Successfully updated account info!</string>
    <string name="alreadyPhone">Remove Phone Number</string>
    <string name="addPhoneNum">Add Phone Number</string>
    <string name="enterPhoneNum">Enter your phone number:</string>
    <string name="phoneNumTitle">New Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="searchName">Search by Name</string>
    <string name="searchCategory">Search by Category</string>
    <string name="nearYou">Find Nearby</string>
    <string name="search">Search</string>
    <string name="categories"><u><b>Categories</b></u></string>
    <string name="selected"><u><b>Selected</b></u></string>
    <string name="add_cat">Select category for search</string>
    <string name="remove_cat">Deselect category for search</string>
    <string name="ok">Okay</string>
    <string name="selectAtLeastOneCat">Select at least 1 category</string>
...
    <string name="inc_dist">Increment distance</string>
    <string name="dec_dist">Decrement distance</string>
    <string name="book_rest">Select restaurant to book table for</string>
    <string name="menu_item_base">Item name</string>
    <string name="menu_item_price">item price</string>
    <string name="menu_item_description">item description</string>
    <string name="tableahead_img">tableahead title image</string>
    <string name="restaurants"><u><b>Restaurants</b></u></string>
    <string name="order_by">Sort by:</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="base_dist">not found</string>
...
