<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.NameScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back" />

                <ImageButton
                    android:id="@+id/helpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/help_icon" />

                <ImageButton
                    android:id="@+id/homeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/icons8_home_32" />

                <ImageButton
                    android:id="@+id/accountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/account_icon" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/image_border"
        android:contentDescription="@string/tableahead_img"
        android:src="@drawable/tableahead_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchName"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/search_et"
        app:layout_constraintStart_toStartOf="@+id/search_et" />

    <EditText
        android:id="@+id/search_et"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:textColorHighlight="@color/black"
        android:autofillHints="@string/enterResName"
        android:hint="@string/enterResName"
        android:textColor="@color/black"
        android:background="#D3D3D3"
        android:textColorHint="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/search_btn"/>


    <Button
        android:id="@+id/search_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>